--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ button:focus-visible {
   position: relative;
   display: inline-block; /* shrink to image */
   align-items: center;
+  width: auto;
 }
 
 .floorplan-container img {
