--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-image: url(Background.jpg);
+  background-image: url(./Background.jpg);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
